# Rogue-C

./: .gitignore  CMakeLists.txt  README.md  colors.txt
Rogue-C/: ASSERT.h  Animation.h  AudioManager.h  Bullet.h  Button.h  CMakeLists.txt  CameraContorl.h  Collisions.h  Component.h  ComponentArray.h  ComponentManager.h  Drawer.h  ECS.h  Enemy.h  Entity.h  Game.h  Gradient.h  Health.h  Input.h  InputSystem.h  LOG.h  MathF.h  ParticleSystem.h  Physics.h  PickUp.h  Player.h  Registry.h  Rogue-C.cpp  Rogue-C.h  Scene.h  SceneManager.h  Signature.h  SpinningSphere.h  SpriteManager.h  System.h  Timer.h  Transform.h  Tween.cpp  Tween.h  UIDrawer.h  (+3 more)
Rogue-C/include/core/: ASSERT.h  Gradient.h  LOG.h  MathF.h  Transform.h  Vec2.h
Rogue-C/include/core/UI/: UIText.h
Rogue-C/include/core/audio/: AudioManager.h
Rogue-C/include/core/ecs/: ComponentArray.h  ComponentManager.h  ECS.h  Entity.h  System.h
Rogue-C/include/core/game/: Debug.h  Game.h  Scene.h  SceneManager.h
Rogue-C/include/core/networking/: Client.h  NetworkInstance.h  NetworkManager.h  Server.h
Rogue-C/include/core/physics/: Collisions.h  Physics.h
Rogue-C/include/core/rendering/: Drawer.h  ESRendering.h  ParticleSystem.h  SpriteManager.h  TileGrid.h  UIDrawer.h
Rogue-C/include/core/serialization/: Serializable.h
Rogue-C/include/core/systems/: Animation.h  Button.h  CameraControl.h  InputSystem.h  Tween.h
Rogue-C/src/: ASSERT.cpp  Animation.cpp  AudioManager.cpp  Bullet.cpp  Button.cpp  CameraContorl.cpp  Client.cpp  Collisions.cpp  ComponentArray.cpp  ComponentManager.cpp  Debug.cpp  Drawer.cpp  ECS.cpp  ESRendering.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Gradient.cpp  Health.cpp  Input.cpp  InputSystem.cpp  LOG.cpp  NetworkManager.cpp  ParticleSystem.cpp  Physics.cpp  PickUp.cpp  Player.cpp  Rogue-C.cpp  Scene.cpp  SceneManager.cpp  Serializable.cpp  Server.cpp  SpinningSphere.cpp  SpriteManager.cpp  System.cpp  TileGrid.cpp  Timer.cpp  Transform.cpp  Tween.cpp  UIDrawer.cpp  (+2 more)
Rogue-C/textures/shaders/: default.fs  default.vs  posterization.fs
